--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="librerias/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="librerias/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="librerias/core/css/index.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="imagenes/favicon/favicon.ico" />
     <title>Regístrate</title>
 </head>
 <body>
